@@ -1,3 +1,163 @@
+# 🚢 Battleship 
+
+Battleship is a **Java-based implementation** of the classic strategy game where players attempt to sink each other's hidden fleet.  
+This version features **player-vs-computer gameplay**, **interactive ship placement**, and a **clean terminal-based interface**.
+
+---
+
+## Features:
+- **Classic Battleship gameplay** with 5 ships (Carrier, Battleship, Cruiser, Submarine, Destroyer)
+- **Interactive ship placement** (manual or random)
+- **Real-time feedback** on hits, misses, and ship status
+- **Score tracking** across multiple games
+- **Built with Java** for cross-platform compatibility
+- **Maven-based** build system for easy compilation
+
+---
+
+## 🖥️ Game Screenshots
+
+<table>
+  <tr>
+    <td align="center">
+      <img src="screenshots/placement.png" alt="Ship Placement Phase" width="300"><br>
+      <em>Ship Placement Screen</em>
+    </td>
+    <td align="center">
+      <img src="screenshots/gameplay.png" alt="Gameplay in Progress" width="300"><br>
+      <em>Gameplay Screen</em>
+    </td>
+    <td align="center">
+      <img src="screenshots/victory.png" alt="Victory Screen" width="300"><br>
+      <em>Victory Screen</em>
+    </td>
+  </tr>
+</table>
+
+---
+</pre> <hr> <h2>📂 File Structure</h2> 
+   <pre>
+└── ishraqgit-battleship/
+    ├── README.md
+    ├── command.txt
+    ├── bin/
+    │   ├── Main.fxml
+    │   └── battleship/
+    │       └── Main.fxml
+    ├── Resource/
+    └── src/
+        ├── App.java
+        └── battleship/
+            ├── App.java
+            ├── Battleship.java
+            ├── Destroyer.java
+            ├── Game.java
+            ├── GameController.java
+            ├── GridCell.java
+            ├── Main.fxml
+            ├── Piece.java
+            ├── Player.java
+            └── Submarine.java
+        └── wrapper/
+            └── maven-wrapper.properties 
+   </pre> <hr> <h2>
+
+## Game Components
+
+### 1️⃣ Main Game Loop
+The `Game` class manages the core gameplay loop, alternating between player and computer turns until victory conditions are met.
+
+**Key features:**
+- Turn management
+- Victory condition checking
+- Game state persistence
+- Score tracking
+
+### 2️⃣ Board Management
+The `Board` class handles all grid-related operations:
+
+**Functionality:**
+- Ship placement validation
+- Attack coordinate processing
+- Board rendering (text-based)
+- Hit/miss tracking
+
+### 3️⃣ Mutiplayer features
+Each `Player` classes handle respective moves:
+
+**Player:**
+- Interactive ship placement
+- Coordinate input validation
+- Attack selection
+
+### 4️⃣ Ship System
+The `Ship` class represents naval units:
+
+**Attributes:**
+- Ship type (size, name)
+- Health tracking
+- Position/orientation
+- Sink detection
+
+---
+
+<h2>⚙️ How to Use</h2>
+<h3>Prerequisites</h3>
+<ul>
+  <li>Java <strong>JDK 17+</strong></li>
+  <li>JavaFX SDK installed (e.g., <code>javafx-sdk-24.0.2</code>)</li>
+  <li>Maven installed (optional but recommended)</li>
+  <li>Compatible IDE (IntelliJ IDEA, Eclipse, VS Code) or terminal access</li>
+</ul>
+
+<h3>Setup & Running</h3>
+<ol>
+  <li>Clone the repository:
+<pre><code>git clone https://github.com/IshraqGit/BATTLESHIP.git
+cd BATTLESHIP</code></pre></li>
+
+  <li>Build the project with Maven:
+<pre><code>mvn clean install</code></pre></li>
+
+  <li>Run the application with Maven:
+<pre><code>mvn javafx:run</code></pre></li>
+
+  <li><strong>Without Maven (direct JavaFX run):</strong>
+<pre><code>set JAVAFX_HOME=C:\Java\javafx-sdk-24.0.2
+javac --module-path "%JAVAFX_HOME%\lib" --add-modules javafx.controls,javafx.fxml ^
+      -d bin src\main\java\battleship\**\*.java
+
+java --module-path "%JAVAFX_HOME%\lib" --add-modules javafx.controls,javafx.fxml ^
+     -cp "bin" battleship.App
+</code></pre></li>
+</ol>
+
+<hr>
+<h2>🛠️ Contributing</h2>
+<p>Contributions are welcome! Follow the steps below to contribute:</p>
+<ol>
+  <li>Fork the repository</li>
+  <li>Create a new branch:
+<pre><code>git checkout -b feature-name</code></pre></li>
+
+  <li>Commit your changes:
+<pre><code>git commit -m "Add some feature"</code></pre></li>
+
+  <li>Push the branch:
+<pre><code>git push origin feature-name</code></pre></li>
+
+  <li>Open a pull request</li>
+</ol>
+
+<hr>
+
+</body>
+</html>
+
+
+
+
+
 # Tutorial: BATTLESHIP
 
 This project builds a digital **Battleship** game where two *players* engage in naval combat. The game allows players to first *place their ships* on a hidden grid and then take turns *firing shots* at their opponent's board. The system tracks hits and misses, determines when ships are sunk, and declares a winner when one player successfully destroys all of the other's fleet.
@@ -344,115 +504,6 @@ Recall from `Main.fxml`:
 *   `fx:id="startButton"`: This gives our button a unique name, which the `@FXML` variable in `GameController` uses to find it.
 *   `onAction="#startGame"`: This is the magic part! It tells the button: "When I'm clicked, go find a method named `startGame` in my `GameController` and run it!"
 
-# Chapter 2: User Interface & Game Flow Controller
-
-In the last chapter, [Application & UI Definition](01_application___ui_definition_.md), we learned how `App.java` gets our game window to appear on the screen, and how `Main.fxml` acts like a blueprint, telling JavaFX exactly where to draw buttons, text fields, and images. It's like we built the stage and placed all the props.
-
-But what good is a stage with props if nothing *happens*? Right now, if you click the "Start Game" button, nothing changes! The text fields don't store your name, and the game doesn't begin.
-
-**The big problem this chapter solves:** How do we make our game's beautiful interface actually *do* something when a player interacts with it? How do we connect the buttons and text boxes you see on screen to the actions and logic of our game?
-
-Imagine you're playing a board game. You have the board, the pieces, and the dice. But you also need a **game master** or a **referee** who explains the rules, announces whose turn it is, and makes sure everyone follows the game's flow. In our Battleship game, the `GameController` is exactly that game master! It's the "brain" that connects what you *see* (the User Interface) to what the game *does* (the Game Logic).
-
-Let's dive in and see how the `GameController` makes our game interactive, using the "Start Game" button as our central example. When a player clicks "Start Game," we want the game to:
-
-1.  Read the names typed into the player name fields.
-2.  Make the name fields and the "Start Game" button disappear or become unusable.
-3.  Prepare the game area for ship placement.
-4.  Tell the player what to do next (e.g., "Player 1: Place your Battleship").
-
----
-
-### Understanding the Game Controller
-
-The `GameController` is a special Java class (a blueprint for an object) that acts as the bridge between your `Main.fxml` blueprint and your game's actual code. Think of it as:
-
-*   **A Listener:** It waits for you to click a button, type text, or do anything on the screen.
-*   **An Updater:** When something happens, it updates the screen to show changes (like changing a message, or revealing parts of the game board).
-*   **A Flow Manager:** It guides the game through different phases, like "name input," "ship placement," and "actual combat."
-
-#### How `Main.fxml` and `GameController.java` Connect
-
-Remember this line from `Main.fxml` in the previous chapter?
-
-```xml
-<StackPane xmlns:fx="http://javafx.com/fxml" fx:controller="battleship.GameController">
-    <!-- ... other UI elements ... -->
-</StackPane>
-```
-**Explanation:**
-The `fx:controller="battleship.GameController"` part is super important! It tells JavaFX: "Hey, for everything inside this `StackPane` (which is almost our entire game screen), the `GameController.java` file is in charge of handling events and making things happen."
-
-Now, let's see how our `GameController` class in `src/battleship/GameController.java` connects to the buttons and text fields defined in `Main.fxml`.
-
-#### Introducing `@FXML`
-
-In JavaFX, we use a special tag called `@FXML` to link elements from our `Main.fxml` (the visual blueprint) to variables and methods in our `GameController.java` (the brains).
-
-Here’s a small peek at our `GameController.java` file:
-
-```java
-package battleship;
-
-import javafx.fxml.FXML; // Don't forget this import!
-import javafx.scene.control.Button;
-import javafx.scene.control.Label;
-import javafx.scene.control.TextField;
-import javafx.scene.layout.GridPane; // For our game boards
-
-public class GameController {
-
-    // These variables will connect to elements in Main.fxml
-    @FXML
-    private TextField player1NameField; // Connected to fx:id="player1NameField"
-    @FXML
-    private TextField player2NameField; // Connected to fx:id="player2NameField"
-    @FXML
-    private Button startButton;        // Connected to fx:id="startButton"
-    @FXML
-    private Label statusLabel;         // Connected to fx:id="statusLabel"
-    @FXML
-    private GridPane playerGrid;       // Connected to fx:id="playerGrid" (our game board)
-
-    // This method will run when the "Start Game" button is clicked
-    @FXML
-    private void startGame() {
-        // We'll put the logic here soon!
-    }
-
-    // This method runs automatically when the FXML is loaded
-    @FXML
-    public void initialize() {
-        // Initial setup for our UI elements
-    }
-}
-```
-
-**Explanation:**
-
-*   **`@FXML` variables:** Notice the `@FXML` right above each variable like `player1NameField`. This tells JavaFX: "Look in `Main.fxml` for an element with `fx:id="player1NameField"` and connect it to *this* variable." This way, our Java code can read what's typed into the `TextField` or change the `Button`'s state.
-*   **`@FXML` methods:** The `@FXML` above `startGame()` tells JavaFX: "This method can be called from `Main.fxml`."
-*   **`initialize()` method:** This is a special method. JavaFX automatically calls it right after it finishes loading all the elements from `Main.fxml` and connecting them to your `@FXML` variables. It's the perfect place to set up the initial state of your game, like disabling certain buttons until they're needed.
-
----
-
-### Making the "Start Game" Button Work!
-
-Let's make our "Start Game" button functional.
-
-#### Step 1: Connecting the Button in FXML
-
-Recall from `Main.fxml`:
-
-```xml
-<Button text="Start Game" fx:id="startButton" onAction="#startGame"/>
-```
-
-**Explanation:**
-
-*   `fx:id="startButton"`: This gives our button a unique name, which the `@FXML` variable in `GameController` uses to find it.
-*   `onAction="#startGame"`: This is the magic part! It tells the button: "When I'm clicked, go find a method named `startGame` in my `GameController` and run it!"
-
 #### Step 2: Setting up the Initial State in `initialize()`
 
 When the game first loads, we want some parts of the game (like the grids) to be disabled because we're still collecting player names.
@@ -551,6 +602,18 @@ public class GameController {
 
 ---
 
+**Step-by-Step Walkthrough:**
+
+1.  **User Clicks:** You, the user, click the "Start Game" button on the screen.
+2.  **FXML Notifies Controller:** Because `Main.fxml` knows that `GameController` is its brain (thanks to `fx:controller`) and that the "Start Game" button should call `#startGame` (thanks to `onAction`), it tells the `GameController` to run its `startGame()` method.
+3.  **Controller Reads Input:** Inside the `startGame()` method, the `GameController` uses the `@FXML` connected variables (`player1NameField`, `player2NameField`) to `getText()` from the input fields.
+4.  **Controller Processes Logic:** The `GameController` then checks if the names are empty. If they are, it updates the `statusLabel` to show an error. If names are good, it proceeds with the next steps.
+5.  **Controller Updates UI:** The `GameController` then uses its `@FXML` connected variables to call methods like `setDisable(true)` on the name fields and the start button, making them unusable. It calls `setDisable(false)` on the `playerGrid` to make it ready for interaction. Finally, it uses `statusLabel.setText()` to tell you what to do next.
+6.  **Screen Updates:** JavaFX takes all these changes and instantly updates what you see on your screen, reflecting the new game state!
+
+This entire process happens incredibly fast, giving the user a seamless and interactive experience. The `GameController` is truly the nerve center, orchestrating the interaction between the visual interface and the underlying game rules.
+
+---
 
 ### Conclusion
 
@@ -1641,3 +1704,11 @@ In this chapter, we've explored the `GridCell` class, the smallest yet incredibl
 This concludes our tutorial on the core components of the Battleship game. You've now learned about the UI, the game controller, players, ships, the game engine, and the individual board cells. You have a solid understanding of the main parts that make our Battleship game work!
 
 ---
+
+<h2>📄 License</h2>
+<p>This project is licensed under the <strong>MIT License</strong>. See the <code>LICENSE</code> file for details.</p>
+
+<hr>
+<footer>
+<p>© 2025 Farhan Ishraq — <code>IshraqGit/BATTLESHIP</code>.</p>
+</footer>
